--- a/static/style.css
+++ b/static/style.css
@@ -11,7 +11,7 @@ body {
     font-weight: bold;
     letter-spacing: 2px;
 }
-.workspace, .board, .list, .card {
+.board, .list, .card {
     background: #fff;
     color: #306998;
     border-radius: 8px;
