--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,21 @@
 {% extends "base.html" %}
+{% block title %}Login{% endblock %}
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-    <label for="username">Usuário:</label><br>
-    <input type="text" id="username" name="username" required><br><br>
-    <label for="password">Senha:</label><br>
-    <input type="password" id="password" name="password" required><br><br>
-    <button type="submit">Entrar</button>
-</form>
-{% if error %}
-<p style="color:red;">{{ error }}</p>
-{% endif %}
-<a href="{{ url_for('register') }}">Não tem conta? Cadastre-se</a>
+<div class="row justify-content-center">
+  <div class="col-md-4">
+    <h2>Login</h2>
+    <form method="POST">
+      <div class="mb-3">
+        <label for="username" class="form-label">Usuário</label>
+        <input type="text" class="form-control" name="username" id="username" required>
+      </div>
+      <div class="mb-3">
+        <label for="password" class="form-label">Senha</label>
+        <input type="password" class="form-control" name="password" id="password" required>
+      </div>
+      <button type="submit" class="btn btn-primary">Entrar</button>
+      <a href="{{ url_for('register') }}" class="btn btn-link">Registrar</a>
+    </form>
+  </div>
+</div>
 {% endblock %}
